framec_tests/language_specific/python/v3_validator/positive/terminal_last_forward.frm
@target python

system S {
    machine:
        $A => $P {
            e() {
                # native prelude
                => $^
            }
        }
        $P { }
}
