framec_tests/language_specific/python/v3_validator/negative/system_block_order.frm
@target python
# @expect: E113

system S {
    interface:
        e()

    domain:
        x = 1

    machine:
        $A {
            e() { pass }
        }
}

